2011-11-13  Adam Barth  <abarth@webkit.org>

        Document::initSecurityOrigin should return earlier more often
        https://bugs.webkit.org/show_bug.cgi?id=72244

        Reviewed by Eric Seidel.

        This minor tweak was suggested by Darin to make the subsequent patches
        easier to read.

        * dom/Document.cpp:
        (WebCore::Document::initSecurityContext):

2011-11-13  Adam Barth  <abarth@webkit.org>

        SecurityPolicy should refer to isUnique rather than isEmpty
        https://bugs.webkit.org/show_bug.cgi?id=72242

        Reviewed by Eric Seidel.

        It doesn't make sense to tweak the security policy for unique origins
        because they're different every time.  Previously, this code checked
        for empty origins, which are technically a subset of unique origins.  I
        don't think it's possible to call this code in a way that can detect
        the difference, but we're eventually going to remove the isEmpty
        function.

        * page/SecurityPolicy.cpp:
        (WebCore::SecurityPolicy::addOriginAccessWhitelistEntry):
        (WebCore::SecurityPolicy::removeOriginAccessWhitelistEntry):

2011-11-13  Adam Barth  <abarth@webkit.org>

        Move isSecureTransitionTo from SecurityOrigin to SecurityContext
        https://bugs.webkit.org/show_bug.cgi?id=72241

        Reviewed by Eric Seidel.

        This patch is a step towards breaking the patch for
        https://bugs.webkit.org/show_bug.cgi?id=71745 up into tiny,
        digestible pieces.

        * dom/SecurityContext.cpp:
        (WebCore::SecurityContext::isSecureTransitionTo):
        * dom/SecurityContext.h:
        * loader/DocumentWriter.cpp:
        (WebCore::DocumentWriter::begin):
        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::stopLoading):
        * page/SecurityOrigin.cpp:
        * page/SecurityOrigin.h:

2011-11-13  Nat Duca  <nduca@chromium.org>
